argocd-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect
  namespace: argocd
spec:
  replacePathRegex:
    regex: "^/argo(.*)"
    replacement: "/"
