grafana-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-redirect
  namespace: monitoring
spec:
  replacePathRegex:
    regex: "^/grafana(.*)"
    replacement: "/"
