whoami-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-redirect
  namespace: matyukhin
spec:
  replacePathRegex:
    regex: "^/whoami(.*)"
    replacement: "/"
