argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - "cluster.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argo
    backendRefs:
    - name: argo-server
      port: 80
