argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-ing-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`argocd.158.160.130.77.sslip.io`)
    services:
    - name: argocd-server
      port: 80
  tls:
    passthrough: true
