grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - "158.160.130.77"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
