grafana-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ing-route
  namespace: monitoring 
spec:
  entryPoints:
    - web               
  routes:
    - match: Host(`158.160.130.77`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana 
          port: 80
