whoami-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http-route
  namespace: matyukhin
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - "158.160.130.77"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /whoami
    backendRefs:
    - name: whoami-svc
      port: 80
