whoami-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ing-route
  namespace: matyukhin
spec:
  entryPoints:
    - web
  routes:
  - match:  Host(`158.160.130.77`) && PathPrefix(`/whoami`)
    kind: Rule
    middlewares:
      - name: whoami-redirect
    services:
    - name: whoami-svc
      port: 80
